# Numerology-metadee

./: .env  .gitignore  Numerology Application - Technical Report.docx  README.md  app.py  create index.py  llm_inference.py  main.py  numerology.py  prompt.py  pyproject.toml  requirements.txt  test_numerology.py
faiss_index/: index.faiss  index.pkl
